TASK-03: Added Cart and Client entity to storing clients added products.